--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "gen:shadcn-props": "node scripts/generate-shadcn-props.mjs"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
